fixed security and save video details component changes